InsuranceLicensePackage/src/objects/License__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Force_Expire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIPR_Manual_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, nipr will ignore the updates on this record</description>
        <label>NIPR Manual Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPN_Number_Formula__c</fullName>
        <formula>IF(RecordType.Name = &apos;Non-Resident State&apos;, Resident_License__r.NPN_Number__c, NPN_Number__c)</formula>
        <label>NPN Number (Resident License)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPN_Number__c</fullName>
        <label>NPN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerActive__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <label>Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resident_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resident License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>Insurance Licenses</relationshipLabel>
        <relationshipName>Insurance_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
  Force_Expire__c,
  &quot;Expired&quot;,
  IF(
    NOT(ISBLANK(Number__c)),
    /* TRUE */
    IF(
      Expiration_Date__c &gt;= TODAY(),
      /* TRUE */
      IF(
        AND(
          RecordType.DeveloperName = &apos;Resident_State&apos;,
          ISBLANK(NPN_Number__c)
          ),
         /* TRUE */
        &quot;Incomplete&quot;,
        /* FALSE */
        IF(
          Approved__c,
          &quot;Active&quot;,
          IF(
            Pending_Approval__c,
            &quot;Pending Approval&quot;,
            &quot;Ready to Submit&quot;
          )
        )
      ),
    
      /* FALSE */
      IF(
        NOT(ISBLANK(Expiration_Date__c)),
         /* TRUE */
         &quot;Expired&quot;,
         &quot;Incomplete&quot;
        )
      ),
      
     /* FALSE */
    &quot;Incomplete&quot;
)
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Insurance License</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Licenses</pluralLabel>
    <recordTypes>
        <fullName>Non_Resident_State</fullName>
        <active>true</active>
        <description>All states outside of your resident license.</description>
        <label>Non-Resident State</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resident_State</fullName>
        <active>true</active>
        <description>Resident State</description>
        <label>Resident State</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Expiration_greater_then_Effective</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(ISCHANGED(Resident_License__c)),
  NOT(ISCHANGED(Force_Expire__c)),
  NOT(ISBLANK(Effective_Date__c)),
  Effective_Date__c &gt;= Expiration_Date__c
)</errorConditionFormula>
        <errorDisplayField>Expiration_Date__c</errorDisplayField>
        <errorMessage>Expiration Date must be greater than Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>License_Dates_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISCHANGED(Resident_License__c)),
    NOT(ISCHANGED(Force_Expire__c)),
    NOT(ISBLANK(Number__c)),
    OR(
       ISBLANK(Effective_Date__c),
       ISBLANK(Expiration_Date__c)
       ),
        OR(ISBLANK($Setup.NIPR_Sync_Config__c.NIPR_Integration_User_Name__c), 
     $User.Username!= $Setup.NIPR_Sync_Config__c.NIPR_Integration_User_Name__c)
   )</errorConditionFormula>
        <errorDisplayField>Expiration_Date__c</errorDisplayField>
        <errorMessage>License Effective Date and Expiration Date are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>License_Number_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISCHANGED(Resident_License__c)),
    NOT(ISCHANGED(Force_Expire__c)),
    ISBLANK(Number__c),
    OR(
       NOT(ISBLANK(Effective_Date__c)),
       NOT(ISBLANK(Expiration_Date__c))
       )
   )</errorConditionFormula>
        <errorDisplayField>Number__c</errorDisplayField>
        <errorMessage>License Number is required if Effective Date and Expiration Date are provided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NPN_Number_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISCHANGED(Resident_License__c)),
    NOT(ISCHANGED(Force_Expire__c)),
    ISBLANK(NPN_Number__c),
    NOT(ISBLANK(Number__c)),
    RecordType.DeveloperName = &apos;Resident_State&apos;
    )</errorConditionFormula>
        <errorDisplayField>NPN_Number__c</errorDisplayField>
        <errorMessage>NPN Number is required if License Number provided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unable_to_edit_an_approved_license</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    Approved__c,
    NOT(ISCHANGED(Force_Expire__c)),
    NOT(ISCHANGED(Approved__c)),
    NOT(ISCHANGED(Resident_License__c)),
    OR(ISBLANK($Setup.NIPR_Sync_Config__c.NIPR_Integration_User_Name__c), 
     $User.Username!= $Setup.NIPR_Sync_Config__c.NIPR_Integration_User_Name__c) 
)</errorConditionFormula>
        <errorMessage>You can&apos;t edit an approved license</errorMessage>
    </validationRules>
</CustomObject>